--- a/index.html
+++ b/index.html
@@ -23,9 +23,445 @@
 </head>
 
 <body>
+    <header>
+        <div class= "titlelogo">
+            <h1>Metrolics</h1>
+            <img src="" title="" alt="">
+        </div>
+        <nav>
+            <div class="navsection lightgreen">
+                <figure class="navicon">
+                    <img src="" title="" alt="">
+                </figure>
+                <h5 class="whitetext">Home</h5>
+            </div>
+            <div class="navsection orangeyellow">
+                <figure class="navicon">
+                    <img src="" title="" alt="">
+                </figure>
+                <h5 class="whitetext">Pages</h5>
+            </div>
+            <div class="navsection lightred">
+                <figure class="navicon">
+                    <img src="" title="" alt="">
+                </figure>
+                <h5 class="whitetext">Blog</h5>
+            </div>
+            <div class="navsection lightblue">
+                <figure class="navicon">
+                    <img src="" title="" alt="">
+                </figure>
+                <h5 class="whitetext">Portfolio</h5>
+            </div>
+            <div class="navsection darkblue">
+                <figure class="navicon">
+                    <img src="" title="" alt="">
+                </figure>
+                <h5 class="whitetext">Home</h5>
+            </div>
+        </nav>
+    </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    <section class="banner">
+        <figure class="arrow">
+            <img src="" title="" alt="">
+        </figure>
+        <div class="bannersubtitle">
+            <h2>Metro Style</h2>
+            <h2>Retina Ready</h2>
+            <h2>Responsive Design</h2>
+        </div>
+        <figure class="arrow">
+            <img src="" title="" alt="">
+        </figure>
+    </section>
+
+    <section class="intro">
+        <h2>Hey guys! This is the <strong>Metrolics</strong> theme. 
+        <br> 
+        It sports a responsive layout with a mobile layout.</h2>
+    </section>
+
+    <section class="row">
+        <div class="title">
+            <h3>Things That We Do</h3>
+            <p>Ask us what we can do for you</p>
+        </div>
+        <article class="content">
+            <div class="column">
+                <figure class="imgheader">
+                    <img src="" title="" alt="">
+                </figure>
+                <h4>Web Solutions</h4>
+                <p>We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfill their design needs.
+                    Whether you need to create a brand from scratch, including marketing materials
+                </p>
+            </div>
+            <div class="column">
+                <figure class="imgheader">
+                    <img src="" title="" alt="">
+                </figure>
+                <h4>Photography</h4>
+                <p>We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfill their design needs.
+                    Whether you need to create a brand from scratch, including marketing materials
+                </p>
+            </div>
+            <div class="column">
+                <figure class="imgheader">
+                    <img src="" title="" alt="">
+                </figure>
+                <h4>Web Development</h4>
+                <p>We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfill their design needs.
+                    Whether you need to create a brand from scratch, including marketing materials
+                </p>
+            </div>
+            <div class="column">
+                <figure class="imgheader">
+                    <img src="" title="" alt="">
+                </figure>
+                <h4>Web Design</h4>
+                <p>We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfill their design needs.
+                    Whether you need to create a brand from scratch, including marketing materials
+                </p>
+            </div>
+        </article>
+    </section>
+
+    <section class="row">
+        <div class="title">
+            <h3>What's Up Lately?</h3>
+            <p>Read up on our latest work</p>
+        </div>
+        <article class="content">
+            <div class="column">
+                <figure class="contentimg">
+                    <img src="" title="" alt="">
+                </figure>
+                <div class="date">
+                    <h5>29</h5>
+                    <p class="whitetext">Nov 2013</p>
+                </div>
+                <div class="postbanner">
+                    <div class="postbantext">
+                        <h5>Sample Image Post</h5>
+                        <p class="whitetext">Photography</p>
+                    </div>
+                    <figure class="bannericon">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+            </div>
+            <div class="column">
+                <figure class="contentimg">
+                    <img src="" title="" alt="">
+                </figure>
+                <div class="date">
+                    <h5>29</h5>
+                    <p class="whitetext">Nov 2013</p>
+                </div>
+                <div class="postbanner">
+                    <div class="postbantext">
+                        <h5>Sample Image Post</h5>
+                        <p class="whitetext">Photography</p>
+                    </div>
+                    <figure class="bannericon">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+            </div>
+            <div class="column">
+                <figure class="contentimg">
+                    <img src="" title="" alt="">
+                </figure>
+                <div class="date">
+                    <h5>29</h5>
+                    <p class="whitetext">Nov 2013</p>
+                </div>
+                <div class="postbanner">
+                    <div class="postbantext">
+                        <h5>Sample Image Post</h5>
+                        <p class="whitetext">Photography</p>
+                    </div>
+                    <figure class="bannericon">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+            </div>
+        </article>
+    </section>
+
+    <hr>
+
+    <section class="row">
+        <div class="title">
+            <h3>Our Latest Projects</h3>
+            <p>Client happy? We are happy.</p>
+        </div>
+        <article class="content">
+            <div class="subrow">
+                <div class="column">
+                    <figure class="contentimg" selected>
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+                <div class="column">
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+                <div class="column">
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+            </div>
+            <div class="subrow">
+                <div class="column">
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+                <div class="column">
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+                <div class="column">
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+            </div>
+        </article>
+    </section>
+
+    <section class="row">
+        <div class="title">
+            <h3>Thingsofabove</h3>
+            <p>Misc stuff we could not put anyplace else</p>
+        </div>
+        <article class="content">
+            <div class="column">
+                <div class="subrow">
+                    <h6 class="whitetext" selected>Sample Accordian Menu</h6>
+                    <h6>+</h6>
+                </div>
+                <div class="subrow">
+                    <div class="subcolumn">
+                        <figure class="mediumicon">
+                            <img src="" title="" alt="">
+                        </figure>
+                    </div>
+                    <div class="subcolumn">
+                        <h6>Web Solution</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+                    </div>
+                </div>
+                <div class="subrow">
+                    <h6 class="whitetext">Sample Accordian Menu 2</h6>
+                    <h6>+</h6>
+                </div>
+                <div class="subrow">
+                    <h6 class="whitetext">Sample Accordian Menu 3</h6>
+                    <h6>+</h6>
+                </div>
+            </div>
+            <div class="column">
+                <div class="subrow">
+                    <h6>Tab1</h6>
+                    <h6>Tab2</h6>
+                    <h6>Tab3</h6>
+                </div>
+                <div class="subrow">
+                    <div class="subcolumn">
+                        <figure class="smallimg">
+                            <img src="" title="" alt="">
+                        </figure>
+                    </div>
+                    <div clss="subcolumn">
+                        <p>Lorem ipsum dolor sit amet, consectuetur adipiscing elit. Sed quis lobortis arcu. Etam tempus lacus quis dui dapibus bibendum. Nullam a commodo nisl.</p>
+                    </div>
+                </div>
+                <div class="subrow">
+                    <div class="subcolumn">
+                        <figure class="smallimg">
+                            <img src="" title="" alt="">
+                        </figure>
+                    </div>
+                    <div clss="subcolumn">
+                        <p>Lorem ipsum dolor sit amet, consectuetur adipiscing elit. Sed quis lobortis arcu. Etam tempus lacus quis dui dapibus bibendum. Nullam a commodo nisl.</p>
+                    </div>
+                </div>
+                <div class="subrow">
+                    <div class="subcolumn">
+                        <figure class="smallimg">
+                            <img src="" title="" alt="">
+                        </figure>
+                    </div>
+                    <div clss="subcolumn">
+                        <p>Lorem ipsum dolor sit amet, consectuetur adipiscing elit. Sed quis lobortis arcu. Etam tempus lacus quis dui dapibus bibendum. Nullam a commodo nisl.</p>
+                    </div>
+                </div>
+                <div class="subrow">
+                    <div class="subcolumn">
+                        <figure class="smallimg">
+                            <img src="" title="" alt="">
+                        </figure>
+                    </div>
+                    <div clss="subcolumn">
+                        <p>Lorem ipsum dolor sit amet, consectuetur adipiscing elit. Sed quis lobortis arcu. Etam tempus lacus quis dui dapibus bibendum. Nullam a commodo nisl.</p>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </section>
+
+    <section class="row">
+        <div class="column">
+            <a class="imglink" href="">
+                <img src="" title="" alt="">
+            </a>
+        </div>
+        <div class="column">
+            <a class="imglink" href="">
+                <img src="" title="" alt="">
+            </a>
+        </div>
+        <div class="column">
+            <a class="imglink" href="">
+                <img src="" title="" alt="">
+            </a>
+        </div>
+        <div class="column">
+            <a class="imglink" href="">
+                <img src="" title="" alt="">
+            </a>
+        </div>
+        <div class="column">
+            <a class="imglink" href="">
+                <img src="" title="" alt="">
+            </a>
+        </div>
+    </section>
+
+    <footer>
+        <section class="row">
+            <div class="column">
+                <figure class="authorimg">
+                    <img src="" title="" alt="">
+                </figure>
+            </div>
+            <div class="column">
+                <h6>Peewee Herman</h6>
+                <p class="whitetext">Peewee has over 10 years experience in the industry. He is our Creative Director, digital designer, web designer and front-end developer.
+                    He is also pretty good with a sketch-book. Before starting the company Peewee worked as a designer and studio manager for a design house
+                    who boasted a number of big name clients.
+                </p>
+            </div>
+        </section>
+
+        <hr>
+
+        <section class="row">
+            <article class="column">
+                <div class="subrow">
+                    <h5>About Us</h5>
+                    <p class="whitetext">Minions ipsum potatoooo potatoooo uuuhhh.</p>
+                </div>
+                <div class="subrow">
+                    <figure class="socialicon">
+                        <img src="" title="" alt="">
+                    </figure>
+                    <figure class="socialicon">
+                        <img src="" title="" alt="">
+                    </figure>
+                    <figure class="socialicon">
+                        <img src="" title="" alt="">
+                    </figure>
+                    <figure class="socialicon">
+                        <img src="" title="" alt="">
+                    </figure>
+                    <figure class="socialicon">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+            </article>
+            <article class="column">
+                <div class="subrow">
+                    <h5>About Us</h5>
+                </div>
+                <div class="subrow">
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+                <div class="subrow">
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                    <figure class="contentimg">
+                        <img src="" title="" alt="">
+                    </figure>
+                </div>
+            </article>
+            <article class="column">
+                <div class="subrow">
+                    <h5>Recent Tweets</h5>
+                </div>
+                <div class="subrow">
+                    <div class="subcolumn">
+                        <figure class="twiticon">
+                            <img src="" title="" alt="">
+                        </figure>
+                    </div>
+                    <p class="whitetext"><strong>@Minions</strong> - Ipsum potatoooo</p>
+                </div>
+                <div class="subrow">
+                    <div class="subcolumn">
+                        <figure class="twiticon">
+                            <img src="" title="" alt="">
+                        </figure>
+                    </div>
+                    <p class="whitetext"><strong>@Minions</strong> - Ipsum potatoooo</p>
+                </div>
+            </article>
+            <article class="column">
+                <div class="subrow">
+                    <h5>Newsletter</h5>
+                </div>
+                <div class="subrow">
+                    <p class="whitetext">
+                        Minions ipsum potatoooo potatoooo uuuhhhh
+                    </p>
+                </div>
+                <div class="subrow">
+                    <div class="subcolumn">
+                        <p class="whitetext">Enter your Email...</p>
+                    </div>
+                    <div class="subcolumn">
+                        <figure class="newsicon">
+                            <img src="" title="" alt="">
+                        </figure>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <figure class="footerpic">
+            <img src="" title="" alt="">
+        </figure>
+    </footer>
+
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
